- Implemented syslog message monitoring on built-in syslog server
- New agent configuration parameter: WaitForProcess
- Number of consecutive polls can be specified for "last value" threshold
- Implemented "Clear DCI data" function
- Management packs improved
- Usage of ifXTable for interface naming made configurable
- NXSL: added new attribute "status" for node objects
- Windows console:
	- Added support for negative values on graphs
	- Implemented editing of predefned graphs
	- Implemented cut/copy/paste in event policy editor
- Java API introduced
- Fixed issues: #31, #74, #146, #218, #228, #235, #236, #237, #238


*
* 0.2.22
*

- Scripts now can be used to form event's message (via %[..] macro)
- Scripts in event processing policy now has access to node properties
  via $node variable and to event properties via $event variable
- Implemented XML encoding for NXCP messages
- Added support of custom object attributes
- Minor map improvements
- Fixed issues: #196, #201, #216, #220, #221, #222, #225, #226, #230, #231


*
* 0.2.21
*

- Multiple network maps implemented
- Added parameter ListenAddress to all services (server, web server, agent)
- New possible value for UseInterfaceAliases - concatenate name with alias
- Added possibility to create custom message in event matching script and
  use it in alarms and actions
- WMI subagent added
- SNMP sysDescr and agent's uname now polled and displayed
- New features in Windows console:
	- Possibility to use non-local timezone in Windows console
	- Default graph settings can be changed
- AIX subagent: implemented System.CPU.LoadAvg* and System.Uptime parameters
- Fixed issues: #193, #194, #198, #204, #209, #211, #212, #213, #214, #215


*
* 0.2.20
*

- Implemented advanced event processing using situations
- Added checking of NetXMS server own network connectivity via beacon hosts
- Implemented "proxy node" functionality for DCIs
- Added possibility to use values of other DCIs in transformation scripts