@@ -4,8 +4,6 @@
 For 0.2.23:
 
 - hide HP-UX unused autoport aggregation interfaces
-- edit predefined graphs
-- nxdbmgr: fix errors like template has reference to non-existing node object
 
 
 GENERAL:
